--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="first-slide">
         <div class="slide-content">
             <h1>Hello</h1>
-            <h2>Dear Khushi</h2>
+            <h2>Anuska Roy</h2>
         </div>
     </div>
 
