--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="slide-content-three">
             <h1>Happy</h1>
             <h2>Birthday</h2>
+            <h3>To You</h3>
         </div>
         <!-- Balloons -->
         <div class="balloon-container">
