--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="third-slide">
         <div class="slide-content-three">
             <h1>Happy</h1>
-            <h2>Birthday</h2>
+            <h2>BirthDay</h2>
             <h2>To You</h2>
         </div>
         <!-- Balloons -->
