--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <audio id="birthday-music" src="https://github.com/basic30/Hack/raw/refs/heads/main/Scott%20Holmes%20Music%20-%20Happy%20Birthday.mp3" preload="auto" autoplay loop></audio>
 
     <script src="script.js"></script>
-<h3>credit goes to snahasish</h3>
 </body>
+<footer style="text-align: center; padding: 10px; background: #f1f1f1;">
+    © 2024 Snahasish Dey. All Rights Reserved.
+</footer>
 </html>
