--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <audio id="birthday-music" src="https://github.com/basic30/Hack/raw/refs/heads/main/Scott%20Holmes%20Music%20-%20Happy%20Birthday.mp3" preload="auto" autoplay loop></audio>
 
     <script src="script.js"></script>
-<footer style="text-align: center; padding: 10px; background: #f1f1f1;">
+<footer style="text-align: bottom; padding: 10px; background: #f1f1f1;">
     © 2024 Snahasish Dey. All Rights Reserved.
 </footer>
 </body>
